--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,7 @@
     "react-dom": "19.2.3",
     "sanity": "^5.10.0",
     "stripe": "^20.3.1",
-    "styled-components": "^6.3.10"
+    "styled-components": "6.1.15"
   },
   "overrides": {
     "isomorphic-dompurify": "2.26.0"
